--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "keywords": ["Laravel", "Lighthouse Model Migrator"],
     "require": {
         "illuminate/support": "~5",
-        "haydenpierce/class-finder": "^0.3.3",
+        "haydenpierce/class-finder": "~0.4.0",
         "nikic/php-parser": "^4.2"
     },
     "require-dev": {
